# weston-ivi-controller

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
.kiro/specs/auto-surface-id/: design.md  requirements.md  tasks.md
.kiro/specs/ivi-cli/: design.md  requirements.md  tasks.md
.kiro/specs/weston-ivi-controller/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: client_library.md  configuration.md  control_interface.md  window_manager_srs.md
ivi-cli/: Cargo.toml  README.md
ivi-cli/sample/: test_ivi_cli.sh
ivi-cli/src/: main.rs  output.rs
ivi-client/: Cargo.toml  README.md  build.rs  cbindgen.toml
ivi-client/examples/: .gitkeep  c_example.c  rust_example.rs
ivi-client/include/: .gitkeep  ivi_client.h
ivi-client/src/: client.rs  error.rs  ffi.rs  lib.rs  protocol.rs  types.rs
ivi-client/src/client/: ipcon.rs  unix_domain.rs
ivi-client/tests/: .gitkeep  integration_test.rs
src/: error.rs  lib.rs  logging.rs
src/controller/: events.rs  id_assignment.rs  id_assignment_integration_tests.rs  ivi_wrapper.rs  mod.rs  notifications.rs  state.rs  subscriptions.rs  validation.rs
src/ffi/: bindings.rs  mod.rs  weston.rs
src/ffi/bindings/: ivi_layer.rs  ivi_layout_api.rs  ivi_layout_layer_properties_m.rs  ivi_layout_surface_properties_m.rs  ivi_surface.rs  weston_output_m.rs  weston_surface_m.rs
src/rpc/: framing.rs  handler.rs  mod.rs  notification_bridge.rs  protocol.rs  transport.rs
src/transport/: ipcon.rs  mod.rs  unix_socket.rs
