[package]
name = "weston-ivi-controller"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jlogger-tracing = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
mio = { version = "0.8", features = ["os-poll", "net"] }
lazy_static = "1.4"

[build-dependencies]
bindgen = "0.69"

[dev-dependencies]
proptest = "1.4"

