[package]
name = "ivi-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command-line interface for Weston IVI Controller"

[[bin]]
name = "ivi_cli"
path = "src/main.rs"

[features]
# Enable IPCON transport (propagates to ivi-client)
enable-ipcon = ["ivi-client/enable-ipcon"]

[dependencies]
jlogger-tracing = { workspace = true }
tracing = { workspace = true }
ivi-client = { path = "../ivi-client" }
clap = { version = "4.6", features = ["derive"] }
