[package]
name = "ivi-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Client library for Weston IVI Controller with Rust and C APIs"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["enable-ipcon"]
# Enable IPCON transport (propagates to weston-ivi-controller)
enable-ipcon = [
  "ipcon-sys/async",
  "ipcon-sys/futures",
  "ipcon-sys/tokio",
  "weston-ivi-controller/enable-ipcon",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
weston-ivi-controller = { path = "..", features = [] }
jlogger-tracing = { workspace = true }
ipcon-sys = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.4"

[build-dependencies]
cbindgen = "0.26"
